Fix: hidden version on mobile view

--- a/src/containers/Sidebar/style.scss
+++ b/src/containers/Sidebar/style.scss
@@ -115,4 +115,8 @@
             display: none;
         }
     }
+
+    .sidebar-version {
+        display: none;
+    }
 }
